fix menu button spacing

--- a/styles/site.css
+++ b/styles/site.css
@@ -64,7 +64,7 @@ body {
 {
   display: block;
   width: 55px;
-  height: 40px;
+  height: 45px;
   position: absolute;
   top: 0px;
   left: -5px;
@@ -103,6 +103,13 @@ body {
 #menuToggle span:first-child
 {
   transform-origin: 0% 0%;
+  margin-top: 5px;
+}
+
+.menu-container span.first
+{
+  transform-origin: 0% 0%;
+  margin-top: 5px;
 }
 
 #menuToggle span:nth-last-child(2)
